Jesus, no idea how to fix this today

--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -153,7 +153,7 @@
     </ion-item>
   </ion-item-group>
   <form id="characterResume-form">
-    <ion-grid style="font-size:8">
+    <ion-grid >
       <ion-row>
         <ion-col col-3>
           <button id="buy-item-button" full ion-button color="secondary" on-click="openBuyItemModal()">
@@ -172,7 +172,7 @@
         </ion-col>
         <ion-col col-3>
           <button id="add-resource-button" full ion-button color="secondary" on-click="openAddResourceModal()">
-            Add New Item
+            Add/Remove Resources
           </button>
         </ion-col>
       </ion-row>
