Fixed error with equipments Fixed tests with wrong infos

--- a/src/pages/modal-test/modal-test.html
+++ b/src/pages/modal-test/modal-test.html
@@ -113,67 +113,67 @@
     <ion-list *ngIf='testName=="attack"'>
         <ion-grid>
             <ion-row>
-                <ion-col>
+                <ion-col col-33>
                     <ion-title style="text-align:center">{{testBasicValueName}} Test</ion-title>
                 </ion-col>
-                <ion-col style="width: 25%">
+                <ion-col col-33>
                     <ion-title style='text-align: center'>Left Hand</ion-title>
                 </ion-col>
-                <ion-col style="width: 25%">
+                <ion-col col-33>
                     <ion-title style='text-align: center'>Right Hand</ion-title>
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-50>
+                <ion-col col-33>
                     <ion-title style="text-align:center">{{testBasicValueName}}</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testLeftHandBasicValue!=-1&&testLeftHandEquipmentValue!=-1' style='text-align: center'>{{testLeftHandBasicValue}}</ion-title>
-                    <ion-title *ngIf='testLeftHandBalanceEquipmentValue==-1&&testLeftHandPiercingEquipmentValue==-1'></ion-title>
+                    <ion-title *ngIf='testLeftHandEquipmentValue==-1'></ion-title>
                     <ion-title *ngIf='testLeftHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testRightHandBasicValue!=-1&&testRightHandEquipmentValue!=-1' style='text-align: center'>{{testRightHandBasicValue}}</ion-title>
-                    <ion-title *ngIf='testLeftHandBalanceEquipmentValue==-1&&testLeftHandPiercingEquipmentValue==-1'></ion-title>
+                    <ion-title *ngIf='testRightHandEquipmentValue==-1'></ion-title>
                     <ion-title *ngIf='testRightHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-50>
+                <ion-col col-33>
                     <ion-title style="text-align:center">Balance Attack</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testLeftHandBasicValue!=-1&&testLeftHandBalanceEquipmentValue!=-1' style='text-align: center'>{{testLeftHandBalanceEquipmentValue}}</ion-title>
                     <ion-title *ngIf='testLeftHandBalanceEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testLeftHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testRightHandBasicValue!=-1&&testRightHandBalanceEquipmentValue!=-1' style='text-align: center'>{{testRightHandBalanceEquipmentValue}}</ion-title>
                     <ion-title *ngIf='testRightHandBalanceEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testRightHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-50>
+                <ion-col col-33>
                     <ion-title style="text-align:center">Piercing Attack</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testLeftHandBasicValue!=-1&&testLeftHandPiercingEquipmentValue!=-1' style='text-align: center'>{{testLeftHandPiercingEquipmentValue}}</ion-title>
                     <ion-title *ngIf='testLeftHandPiercingEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testLeftHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col col-33>
                     <ion-title *ngIf='testRightHandBasicValue!=-1&&testRightHandPiercingEquipmentValue!=-1' style='text-align: center'>{{testRightHandPiercingEquipmentValue}}</ion-title>
                     <ion-title *ngIf='testRightHandPiercingEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testRightHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col>
+                <ion-col col-33 style='text-align: center;margin-left: -11%'>
                     <ion-title style='text-align: center'>Test Modifier</ion-title>
                 </ion-col>
-                <ion-col style="max-width:66%">
-                    <div style='text-align: center'>
+                <ion-col col-67 style='text-align: center;'>
+                    <div style='margin-left:-20%'>
                         <button ion-button small color="danger" on-click="removeModValue()">
                             <ion-icon name="remove"></ion-icon>
                         </button>
@@ -189,32 +189,30 @@
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-50>
-                    <ion-title style="text-align:center">Final Balance</ion-title>
+                <ion-col col-33>
+                    <ion-title style="text-align:center">Balance Final</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col>
                     <ion-title *ngIf='testLeftHandBasicValue!=-1&&testLeftHandBalanceEquipmentValue!=-1' style='text-align: center'>{{testLeftHandBasicValue+testLeftHandBalanceEquipmentValue+testModValue}}</ion-title>
                     <ion-title *ngIf='testLeftHandBalanceEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testLeftHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
-                    <ion-title style='text-align: center'></ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col>
                     <ion-title *ngIf='testRightHandBasicValue!=-1&&testRightHandBalanceEquipmentValue!=-1' style='text-align: center'>{{testRightHandBasicValue+testRightHandBalanceEquipmentValue+testModValue}}</ion-title>
                     <ion-title *ngIf='testRightHandBalanceEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testRightHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-50>
-                    <ion-title style="text-align:center">Final Piercing</ion-title>
+                <ion-col col-33>
+                    <ion-title style="text-align:center">Piercing Final</ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col>
                     <ion-title *ngIf='testLeftHandBasicValue!=-1&&testLeftHandPiercingEquipmentValue!=-1' style='text-align: center'>{{testLeftHandBasicValue+testLeftHandPiercingEquipmentValue+testModValue}}</ion-title>
                     <ion-title *ngIf='testLeftHandPiercingEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testLeftHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
-                    <ion-title style='text-align: center'></ion-title>
                 </ion-col>
-                <ion-col col-25>
+                <ion-col>
                     <ion-title *ngIf='testRightHandBasicValue!=-1&&testRightHandPiercingEquipmentValue!=-1' style='text-align: center'>{{testRightHandBasicValue+testRightHandPiercingEquipmentValue+testModValue}}</ion-title>
                     <ion-title *ngIf='testRightHandPiercingEquipmentValue==-1' style='text-align: center'></ion-title>
                     <ion-title *ngIf='testRightHandBasicValue==-1' style='text-align: center'>Can't</ion-title>
@@ -257,8 +255,9 @@
         <ion-item id="end_value" style="font-size:250% !important">
             Test Final Value
             <ion-note item-right style="color:black" *ngIf="testBasicValue!=-1">{{testBasicValue+testEquipmentValue+testModValue}}</ion-note>
-            <ion-note item-right style="color:black"*ngIf="testBasicValue==-1">Can't</ion-note>
+            <ion-note item-right style="color:black" *ngIf="testBasicValue==-1">Can't</ion-note>
         </ion-item>
     </ion-list>
 </div>
+
 </html>
