--- a/src/pages/modal-disadvantages/modal-disadvantages.html
+++ b/src/pages/modal-disadvantages/modal-disadvantages.html
@@ -49,8 +49,8 @@
     </ion-segment>
 </div>
 
-<div [ngSwitch]="disadvantagesModel">
-    <ion-list *ngSwitchCase="'mental'">
+<ion-content [ngSwitch]="disadvantagesModel">
+    <ion-list *ngSwitchCase="'mental'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let mental of mentals">
             <ion-item *ngIf="notInCharList(mental)">
                 <ion-thumbnail item-start>
@@ -100,7 +100,7 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <ion-list *ngSwitchCase="'physical'">
+    <ion-list *ngSwitchCase="'physical'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let physical of physicals">
             <ion-item *ngIf="notInCharList(physical)">
                 <ion-thumbnail item-start>
@@ -150,7 +150,7 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <ion-list *ngSwitchCase="'social'">
+    <ion-list *ngSwitchCase="'social'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let social of socials">
             <ion-item *ngIf="notInCharList(social)">
                 <ion-thumbnail item-start>
@@ -200,7 +200,7 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <ion-list *ngSwitchCase="'exotic'">
+    <ion-list *ngSwitchCase="'exotic'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let exotic of exotics">
             <ion-item *ngIf="notInCharList(exotic)">
                 <ion-thumbnail item-start>
@@ -250,7 +250,7 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <ion-list *ngSwitchCase="'supernatural'">
+    <ion-list *ngSwitchCase="'supernatural'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let supernatural of supernaturals">
             <ion-item *ngIf="notInCharList(supernatural)">
                 <ion-thumbnail item-start>
@@ -300,7 +300,7 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <ion-list *ngSwitchCase="'mundane'">
+    <ion-list *ngSwitchCase="'mundane'" style="padding-bottom:20%">
         <ion-item-sliding *ngFor="let mundane of mundanes">
             <ion-item *ngIf="notInCharList(mundane)">
                 <ion-thumbnail item-start>
@@ -353,6 +353,6 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-</div>
+</ion-content>
 
 </html>
