--- a/src/pages/character-skills/character-skills.html
+++ b/src/pages/character-skills/character-skills.html
@@ -34,10 +34,12 @@
               {{skill.level-1}}
             </label>
           </button>
-          <button *ngIf="new_char.current_points+4<=new_char.max_points" ion-button color="secondary" on-click="addSkillLevel(skill)">
+          <button *ngIf="new_char.current_points+4<=new_char.max_points" ion-button color="secondary"
+            on-click="addSkillLevel(skill)">
             <ion-icon name="add"></ion-icon>
           </button>
-          <button *ngIf="new_char.current_points+4>new_char.max_points" disabled ion-button color="secondary" on-click="addSkillLevel(skill)">
+          <button *ngIf="new_char.current_points+4>new_char.max_points" disabled ion-button color="secondary"
+            on-click="addSkillLevel(skill)">
             <ion-icon name="add"></ion-icon>
           </button>
           <button ion-button color="danger" on-click="removeSkill(skill)">
