--- a/src/pages/extras/extras.html
+++ b/src/pages/extras/extras.html
@@ -57,7 +57,7 @@
   </h3>
   <ion-item-sliding *ngFor="let advantage of char.advantages">
     <ion-item>
-      <h1 item-start style="width:20%">{{advantage.name}}</h1>
+      <h1 item-start style="width:25%;font-size: 2rem">{{advantage.name}}</h1>
       <ion-note item-content>{{advantage.description}}</ion-note>
     </ion-item>
   </ion-item-sliding>
@@ -66,7 +66,7 @@
   </h3>
   <ion-item-sliding *ngFor="let disadvantage of char.disadvantages">
       <ion-item>
-        <h1 item-start style="width:20%">{{disadvantage.name}}</h1>
+        <h1 item-start style="width:25%;font-size: 2rem">{{disadvantage.name}}</h1>
         <ion-note item-content>{{disadvantage.description}}</ion-note>
       </ion-item>
     </ion-item-sliding>
