--- a/src/pages/modal-add-item/modal-add-item.html
+++ b/src/pages/modal-add-item/modal-add-item.html
@@ -32,14 +32,14 @@
     
     <div padding>
         <ion-segment [(ngModel)]="mainModel">
-            <ion-segment-button value="weapons">
-                <h2>Weapons</h2>
+            <ion-segment-button value="weapons" style="font-size:2rem">
+                Weapons
             </ion-segment-button>
-            <ion-segment-button value="armors">
-                <h2>Armors</h2>
+            <ion-segment-button value="armors" style="font-size:2rem">
+                Armors
             </ion-segment-button>
-            <ion-segment-button value="items">
-                <h2>Items</h2>
+            <ion-segment-button value="items"  style="font-size:2rem">
+                Items
             </ion-segment-button>
         </ion-segment>
     </div>
