--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -153,25 +153,27 @@
     </ion-item>
   </ion-item-group>
   <form id="characterResume-form">
-    <ion-grid >
+    <ion-grid>
       <ion-row>
-        <ion-col col-3>
-          <button id="buy-item-button" full ion-button color="secondary" on-click="openBuyItemModal()">
+        <ion-col col-6>
+          <button id="buy-item-button" style="font-size:1.2rem" full ion-button color="secondary" on-click="openBuyItemModal()">
             Buy Item/Equipment
           </button>
         </ion-col>
-        <ion-col col-3>
-          <button id="add-item-button" full ion-button color="secondary" on-click="openAddItemModal()">
+        <ion-col col-6>
+          <button id="add-item-button" style="font-size:1.2rem" full ion-button color="secondary" on-click="openAddItemModal()">
             Add Item/Equipment
           </button>
         </ion-col>
-        <ion-col col-3>
-          <button id="add-new-item-button" full ion-button color="secondary" on-click="openAddNewItemModal()">
+      </ion-row>
+      <ion-row>
+        <ion-col col-6>
+          <button id="add-new-item-button" style="font-size:1.2rem" full ion-button color="secondary" on-click="openAddNewItemModal()">
             Add New Item
           </button>
         </ion-col>
-        <ion-col col-3>
-          <button id="add-resource-button" full ion-button color="secondary" on-click="openAddResourceModal()">
+        <ion-col col-6>
+          <button id="add-resource-button" style="font-size:1.2rem" full ion-button color="secondary" on-click="openAddResourceModal()">
             Add/Remove Resources
           </button>
         </ion-col>
