--- a/src/pages/modal-buy-item/modal-buy-item.html
+++ b/src/pages/modal-buy-item/modal-buy-item.html
@@ -36,19 +36,19 @@
 
 <div padding>
     <ion-segment [(ngModel)]="mainModel">
-        <ion-segment-button value="weapons">
-            <h2>Weapons</h2>
+        <ion-segment-button value="weapons" style="font-size:2rem">
+            Weapons
         </ion-segment-button>
-        <ion-segment-button value="armors">
-            <h2>Armors</h2>
+        <ion-segment-button value="armors" style="font-size:2rem">
+            Armors
         </ion-segment-button>
-        <ion-segment-button value="items">
-            <h2>Items</h2>
+        <ion-segment-button value="items" style="font-size:2rem">
+            Items
         </ion-segment-button>
     </ion-segment>
 </div>
 
-<div [ngSwitch]="mainModel">
+<ion-content [ngSwitch]="mainModel">
     <ion-list *ngSwitchCase="'weapons'">
         <div padding>
             <ion-segment [(ngModel)]="weaponModel">
@@ -74,21 +74,23 @@
                         </ion-thumbnail>
                         <ion-grid item-content>
                             <ion-row>
-                                <ion-col col-1>
+                                <ion-col col-4>
                                     <h2 class="modalTitle">NT</h2>
                                     <h3>{{oneHand.nt}}</h3>
                                 </ion-col>
-                                <ion-col col-7>
-                                    <h2 class="modalTitle">Description</h2>
-                                    <h3>{{oneHand.description}}</h3>
-                                </ion-col>
-                                <ion-col col-2>
+                                <ion-col col-4>
                                     <h2 class="modalTitle">Cost</h2>
                                     <h3>{{oneHand.cost}}</h3>
                                 </ion-col>
-                                <ion-col col-2>
+                                <ion-col col-4>
                                     <h2 class="modalTitle">Weight</h2>
                                     <h3>{{oneHand.weight}}</h3>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col>
+                                    <h2 class="modalTitle">Description</h2>
+                                    <h3>{{oneHand.description}}</h3>
                                 </ion-col>
                             </ion-row>
                         </ion-grid>
@@ -508,4 +510,4 @@
             </ion-list>
         </div>
     </ion-list>
-</div>
+</ion-content>
